Set up initial project structure with core functionality
Added database configuration, schema creation scripts, and entities for Users and Employees. Implemented services and controllers for authentication and employee management. Integrated test and development properties for H2 database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
+# Database
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/FREEPDB1
+spring.datasource.username=erms_user
+spring.datasource.password=erms_password
+
+# Spring Security default user (for development only)
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMINISTRATOR
+
 # Server configuration
 server.port=8080
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
