Add Audit, Mapping, and Role-Based Access Control Features
Implemented EmployeeAuditPanel for viewing audit history and added an EmployeeAuditService to handle audit retrieval. Introduced EmployeeMapper for entity-model transformations, and enforced role-based access control in EmployeeService. Improved department filtering, security enforcement, and replaced Employee entities with EmployeeModel in API endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,13 @@ spring.security.user.roles=ADMINISTRATOR
 server.port=8080
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
+# Envers Configuration
+spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_AUD
+spring.jpa.properties.org.hibernate.envers.revision_field_name=REV
+spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REVTYPE
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.hahn.employeerecordsmanagementsystem=DEBUG
