--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,26 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Security Configuration
+spring.security.user.name=test_user
+spring.security.user.password=test_password
+spring.security.user.roles=HR_PERSONNEL
+
+# Disable JPA Open-in-View
+spring.jpa.open-in-view=false
+
+# Disable Swagger
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+
+# Test Context Configuration
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=false
