--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <version>1.3.2</version>
         </dependency>
 
+         <dependency>
+             <groupId>com.toedter</groupId>
+             <artifactId>jcalendar</artifactId>
+             <version>1.4</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
